--- a/_posts/2018-05-02-rpo-rto.md
+++ b/_posts/2018-05-02-rpo-rto.md
@@ -3,7 +3,7 @@ layout:     post
 title:      RTO RPO - Backup
 subtitle:   
 author:     NDA
-header-img: img/posts/bg06.png
+header-img: img/posts/net02.jpg
 header-mask: 0.6
 catalog:    true
 tags:
