--- a/_posts/2022-01-01-Intro.md
+++ b/_posts/2022-01-01-Intro.md
@@ -1,16 +1,28 @@
 ---
 layout:     post
-title:      Template post
-subtitle:   Template post for blog
-date:       2017-01-06
+title:      Công nghệ thông tin - IT
+subtitle:   "Trên đời này làm gì có đường, người ta đi mãi cũng thành đường thôi" - Lỗ Tấn
+date:       2007-05-07
 author:     NDA
-header-img: img/bg/wave3.svg
+header-img: img/it/it_header07.jpg
 catalog: true
-tags:
-    - Template
-    - System
+
 ---
-# Lời nói đầu
 
->Lời nói đầu
+>Lĩnh vực công nghệ thông tin (gọi tắt là IT) thường gắn liền với hệ thống máy tính, phần cứng, phần mềm và mạng liên quan đến việc xử lý và phân phối dữ liệu. Bao gồm cả thiết bị phần cứng mạng, chẳng hạn như máy chủ và bộ định tuyến cũng như các ứng dụng cho phép liên lạc qua nhiều mạng và Internet nói chung.
 
+# What types of information technology are there?
+
+Việc sử dụng thuật ngữ "công nghệ thông tin" hiện đại đầu tiên là trong một bài báo của Harvard Business Review năm 1958 định nghĩa CNTT là công nghệ thuộc một trong ba loại:
+
+* Kỹ thuật xử lý
+* Việc áp dụng các phương pháp thống kê và toán học vào việc ra quyết định
+* Mô phỏng tư duy bậc cao thông qua chương trình máy tính
+
+# Nói một cách đơn giản thì công nghệ thông tin là gì?
+
+Hiện tại được định nghĩa là các công việc có phạm vi: hệ thống máy tính, phần cứng, phần mềm và mạng liên quan đến việc xử lý và phân phối dữ liệu.
+
+# Phòng CNTT là gì?
+
+Các đơn vị tổ chức xử lý hệ thống máy tính, phần cứng, phần mềm và mạng liên quan đến việc xử lý và phân phối dữ liệu thường được gọi là bộ phận CNTT. Một số tổ chức gọi bộ phận CNTT của họ là IS (information systems - hệ thống thông tin) hoặc MIS (management information systems - hệ thống thông tin quản lý).Ư
