--- a/_posts/2017-05-07-Intro.md
+++ b/_posts/2017-05-07-Intro.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      Công nghệ thông tin - IT
-subtitle:   "Trên đời này làm gì có đường, người ta đi mãi cũng thành đường thôi" - Lỗ Tấn
+subtitle:   My job ;D
 author:     NDA
 header-img: img/it/it_header07.jpg
 catalog: true
