--- a/_posts/2017-05-07-Intro.md
+++ b/_posts/2017-05-07-Intro.md
@@ -4,6 +4,7 @@ title:      Công nghệ thông tin - IT
 subtitle:   My job ;D
 author:     NDA
 header-img: img/it/it_header07.jpg
+header-mask: 0.5
 catalog: true
 tags:
 ---
