--- a/_posts/2019-02-03-qr-code.md
+++ b/_posts/2019-02-03-qr-code.md
@@ -8,7 +8,7 @@ header-img: img/qr/qr1.png
 header-mask: 0.5
 catalog: true
 tags:
-    qr code
+    qr_code
 ---
 
 **Mã QR là gì? Các lĩnh vực tiêu biểu sử dụng mã QR**
